# cml_rain

./: .gitignore  CMakeLists.txt  README.md  cml_rain_env.yml  config.json  link_doc.jsonc
notebooks/: plot_link_data.ipynb  prob_dist.ipynb
scripts/: add_links.py  attenuation.py  db_utils.py  load_nl_data.py  make_test_data.py  rain.py  rain_class.py  reference_power.py
src/: EPSG-3035.json  cml_interp.cpp  cml_interp.h  image_projection.cpp  image_projection.h  kriging.h  main.cpp  mongo_client_manager.h  write_nc.h
